Wish list fixes, video player poster, lookbook stretch

--- a/assets/scss/content/_look-book.scss
+++ b/assets/scss/content/_look-book.scss
@@ -8,7 +8,7 @@
 	
 	
 	&__item {
-		display: flex;
+		display: block;
 		margin: 0 auto;
 		width: 100%;
 
